syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "store/setting.proto";

option go_package = "generated-go/v1";

service SettingService {
  rpc GetSetting(GetSettingRequest) returns (Setting) {
    option (google.api.http) = {get: "/v1/{name=settings/*}"};
    option (google.api.method_signature) = "name";
  }

  rpc SetSetting(SetSettingRequest) returns (Setting) {
    option (google.api.http) = {
      patch: "/v1/{setting.name=settings/*}"
      body: "setting"
    };
  }
}

// The request message for getting a setting.
message GetSettingRequest {
  // The resource name of the setting.
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

// The response message for getting a setting.
message GetSettingResponse {
  Setting setting = 1;
}

// The request message for updating a setting.
message SetSettingRequest {
  // The setting to update.
  Setting setting = 1 [(google.api.field_behavior) = REQUIRED];

  // validate_only is a flag to indicate whether to validate the setting value,
  // server would not persist the setting value if it is true.
  bool validate_only = 2;
}

// The schema of setting.
message Setting {
  // The resource name of the setting. Must be one of the following forms:
  //
  // - `setting/{setting_name}`
  // For example, "settings/bb.branding.logo"
  string name = 1;

  // The value of the setting.
  Value value = 2;
}

// The data in setting value.
message Value {
  // Value is a oneof field for setting value.
  oneof value {
    // Defines this value as being a string value.
    string string_value = 1;
    store.SMTPMailDeliverySetting smtp_mail_delivery_setting_value = 2;
    store.WorkspaceProfileSetting workspace_profile_setting_value = 3;
    store.AgentPluginSetting agent_plugin_setting_value = 4;
    store.WorkspaceApprovalSetting workspace_approval_setting_value = 5;
    store.AppIMSetting app_im_setting_value = 6;
    store.WorkspaceTrialSetting workspace_trial_setting_value = 7;
  }
}
